add reconvert images task

--- a/src/Template/cup/sidebar.twig
+++ b/src/Template/cup/sidebar.twig
@@ -83,10 +83,17 @@
                     <div class="quick-scroll scrollbar-outer">
                         <div class="quick-content">
                             <form action="/cup/task/run" method="post" class="row m-0" onsubmit="return confirm('{{ 'Are you sure you want to perform this action now?'|locale }}');">
-                                <button type="submit" name="task" value="App\Domain\Tasks\SearchIndexTask" class="col-12 btn btn-dark">
+                                <button type="submit" name="task" value="App\Domain\Tasks\SearchIndexTask" class="col-12 btn btn-dark mb-1">
                                     <div class="quick-actions-item">
                                         <i class="fas fa-search"></i>
                                         <span class="text">{{ 'Update search index'|locale }}</span>
+                                    </div>
+                                </button>
+
+                                <button type="submit" name="task" value="App\Domain\Tasks\ReConvertImageTask" class="col-12 btn btn-dark mb-1">
+                                    <div class="quick-actions-item">
+                                        <i class="fas fa-images"></i>
+                                        <span class="text">{{ 'Convert all images'|locale }}</span>
                                     </div>
                                 </button>
                             </form>
