change search name in parameters

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -61,7 +61,7 @@
                                             <a class="nav-link"         data-toggle="pill" href="#other-publication">{{ 'Publications'|locale }}</a>
                                             <a class="nav-link"         data-toggle="pill" href="#other-page">{{ 'Pages'|locale }}</a>
                                             <a class="nav-link"         data-toggle="pill" href="#other-form">{{ 'Forms'|locale }}</a>
-                                            <a class="nav-link"         data-toggle="pill" href="#other-search">{{ 'Search'|locale }}</a>
+                                            <a class="nav-link"         data-toggle="pill" href="#other-search">{{ 'Search Options'|locale }}</a>
                                             <a class="nav-link"         data-toggle="pill" href="#other-guestbook">{{ 'Guestbook'|locale }}</a>
                                             <a class="nav-link"         data-toggle="pill" href="#other-api">{{ 'API'|locale }}</a>
                                         </div>
@@ -473,7 +473,7 @@
                                                 } %}
                                             </div>
 
-                                            {# TAB: Other Search #}
+                                            {# TAB: Other Search Options #}
                                             <div class="tab-pane fade" id="other-search">
                                                 {% include 'cup/parameters/field.twig' with {
                                                     'label': 'Enable Search',
