--- a/src/Template/cup/editor/index-aside.twig
+++ b/src/Template/cup/editor/index-aside.twig
@@ -9,7 +9,7 @@
         .page-aside #editor-app-nav {
             position: relative;
             height: calc(100vh - 62px - 15px - 66px);
-            overflow: auto;
+            overflow-x: hidden;
         }
 
         @media screen and (max-width: 856px) {
