--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -24,19 +24,17 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <tr>
-                                <th>{{ 'Date received'|locale }}</th>
-                                <th width="25%" class="text-center no-sorting"></th>
-                            </tr>
+                            <div class="col-6 col-sm">{{ 'Date received'|locale }}</div>
+                            <div class="col-6 col-sm-4 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for item in list %}
-                                <tr>
-                                    <td data-order="{{ item.date.getTimestamp() }}">
+                                <div class="row">
+                                    <div class="col-6 col-sm">
                                         {{ item.date|df }}
-                                    </td>
-                                    <td width="25%" class="text-center">
+                                    </div>
+                                    <div class="col-6 col-sm-4 text-right">
                                         <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the entry?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}" class="btn btn-sm btn-info">
@@ -49,8 +47,8 @@
                                                 </button>
                                             </div>
                                         </form>
-                                    </td>
-                                </tr>
+                                    </div>
+                                </div>
                             {% endfor %}
                         {% endblock %}
                     {% endembed %}
