--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -16,21 +16,15 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
-                        {% if category %}
-                            <a href="/cup/catalog/product/{{ category.parent }}" class="btn btn-secondary btn-icon mr-1">
-                                <i class="fas fa-arrow-left"></i>
-                            </a>
-                        {% endif %}
-
                         <a href="#btn-modal-import" rel="modal:open" class="btn btn-secondary btn-icon ml-auto text-white" data-toggle="tooltip" data-placement="top" title="{{ 'Import products'|locale }}">
                             <i class="fas fa-file-import"></i>
                         </a>
                         {% include "cup/catalog/import-modal.twig" %}
-                        <a href="/cup/catalog/data/export{{ category.uuid ? '?category=' ~ category.uuid : '' }}" class="btn btn-secondary btn-icon ml-1 text-white" data-toggle="tooltip" data-placement="top" title="{{ 'Export current product list'|locale }}">
+                        <a href="/cup/catalog/data/export" class="btn btn-secondary btn-icon ml-1 text-white" data-toggle="tooltip" data-placement="top" title="{{ 'Export current product list'|locale }}">
                             <i class="fas fa-file-export"></i>
                         </a>
 
-                        <a href="/cup/catalog/product/add{{ category ? '?category=' ~ category.uuid : '' }}" class="btn btn-primary btn-round ml-1">
+                        <a href="/cup/catalog/product/add" class="btn btn-primary btn-round ml-1">
                             <i class="fa fa-plus"></i>
                             {{ 'Create product'|locale }}
                         </a>
@@ -53,7 +47,7 @@
 
                                         <div class="text-black-50 float-right">
                                             {% if item.special %}
-                                                <i class="fas fa-tag" data-toggle="tooltip" data-placement="right" title="Акция"></i>
+                                                <i class="fas fa-tag" data-toggle="tooltip" data-placement="right" title="{{ 'Special'|locale }}"></i>
                                             {% endif %}
                                         </div>
                                     </div>
@@ -89,18 +83,8 @@
                             {% endfor %}
                         {% endblock %}
                     {% endembed %}
-                </div>
 
-                {% if category.uuid %}
-                    <div class="card-footer">
-                        <div class="d-flex align-items-center">
-                            <a href="/cup/catalog/category/{{ category.uuid }}/edit" class="btn btn-info btn-round ml-1">
-                                <i class="fa fa-edit"></i>
-                                {{ 'Change category'|locale }}
-                            </a>
-                        </div>
-                    </div>
-                {% endif %}
+                </div>
             </div>
         </div>
     </div>
