added the ability to upload files to the product

--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -554,6 +554,8 @@
                                     </div>
                                 </div>
 
+                                {% include 'cup/form-file.twig' with { 'entity': item } %}
+
                                 <hr>
 
                                 {% include 'cup/form-tags.twig' with {
