--- a/src/Template/cup/publication/form.twig
+++ b/src/Template/cup/publication/form.twig
@@ -175,6 +175,7 @@
                                 </div>
 
                                 {% include 'cup/form-image.twig' with { 'entity': publication } %}
+                                {% include 'cup/form-file.twig' with { 'entity': publication } %}
 
                                 <hr>
 
