--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -122,6 +122,7 @@
                                 </div>
 
                                 {% include 'cup/form-image.twig' with { 'entity': item } %}
+                                {% include 'cup/form-file.twig' with { 'entity': item } %}
 
                                 <hr>
 
