--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -19,7 +19,7 @@
                 <form method="post" enctype="multipart/form-data">
                     <div class="card-header">
                         <div class="d-flex align-items-center">
-                            <a href="/cup/catalog/product" class="btn btn-secondary btn-icon mr-1">
+                            <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-secondary btn-icon mr-1">
                                 <i class="fas fa-long-arrow-alt-left"></i>
                             </a>
 
