--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -16,15 +16,21 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
+                        {% if category %}
+                            <a href="/cup/catalog/product/{{ category.parent }}" class="btn btn-secondary btn-icon mr-1">
+                                <i class="fas fa-arrow-left"></i>
+                            </a>
+                        {% endif %}
+
                         <a href="#btn-modal-import" rel="modal:open" class="btn btn-secondary btn-icon ml-auto text-white" data-toggle="tooltip" data-placement="top" title="{{ 'Import products'|locale }}">
                             <i class="fas fa-file-import"></i>
                         </a>
                         {% include "cup/catalog/import-modal.twig" %}
-                        <a href="/cup/catalog/data/export" class="btn btn-secondary btn-icon ml-1 text-white" data-toggle="tooltip" data-placement="top" title="{{ 'Export current product list'|locale }}">
+                        <a href="/cup/catalog/data/export{{ category.uuid ? '?category=' ~ category.uuid : '' }}" class="btn btn-secondary btn-icon ml-1 text-white" data-toggle="tooltip" data-placement="top" title="{{ 'Export current product list'|locale }}">
                             <i class="fas fa-file-export"></i>
                         </a>
 
-                        <a href="/cup/catalog/product/add" class="btn btn-primary btn-round ml-1">
+                        <a href="/cup/catalog/product/add{{ category ? '?category=' ~ category.uuid : '' }}" class="btn btn-primary btn-round ml-1">
                             <i class="fa fa-plus"></i>
                             {{ 'Create product'|locale }}
                         </a>
