--- a/public/assets/css/atlantis.css
+++ b/public/assets/css/atlantis.css
@@ -5372,7 +5372,7 @@ label {
 /*     Input    */
 .form-group, .form-check {
     margin-bottom: 0;
-    padding: 10px;
+    padding: 10px 0;
 }
 
 .form-group + small , .form-check + small  {
