fix parameters example

--- a/src/Template/cup/parameters/index.twig
+++ b/src/Template/cup/parameters/index.twig
@@ -1253,10 +1253,10 @@
                                                 can be easily used in a template.
                                             {% endlocale %}<br>
                                             <b>{{ 'For example'|locale }}</b>:
-                                            {{ 'variable named'|locale }} <code>my_variable</code>
+                                            {{ 'variable named'|locale }} <code>office_phone</code>
                                             {{ 'can be displayed on the page using the following code:'|locale }}
                                             <br>
-                                            <code>&lbrace;&lbrace; parameter('var_my_variable', 'default value') &rbrace;&rbrace;</code>
+                                            <code>&lbrace;&lbrace; parameter('var_office_phone', 'default value') &rbrace;&rbrace;</code>
                                         </p>
 
                                         {% include 'cup/form.twig' with {
