fix jquery link

--- a/theme/default/main.twig
+++ b/theme/default/main.twig
@@ -73,7 +73,7 @@
             </a>
         {% endblock %}
 
-        <script src="/assets/js/core/jquery.3.2.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/tiny-slider@2.9.4/dist/min/tiny-slider.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/glightbox@3.2.0/dist/js/glightbox.min.js"></script>
