--- a/theme/default/search.twig
+++ b/theme/default/search.twig
@@ -88,7 +88,7 @@
 
                                     {% for item in list %}
                                         <div class="row my-3">
-                                            <div class="col-2">
+                                            <div class="col-2 text-center">
                                                 <a href="/{{ item.address }}">
                                                     {% include 'mixin/img.twig' with {
                                                         'placeholder': item.files ? item.files[0].path.small : '/assets/img/no_image.png',
