change comment & meta generator

--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="{{ _language }}">
-    <!-- Copyright © 2011-{{ 'now'|df('Y') }} WebSpace Engine — OpenSource WebSpace Engine CMS -->
+    <!-- Copyright © 2011-{{ 'now'|df('Y') }} Aleksey Ilyin (getwebspace.org) — OpenSource WebSpace Engine CMS -->
     <!-- Website: https://getwebspace.org -->
 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="generator" content="OpenSource WebSpace Engine CMS" />
+        <meta name="generator" content="WebSpace Engine CMS" />
 
         {% block head '' %}
         {% block style '' %}
