--- a/src/Template/layout.twig
+++ b/src/Template/layout.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ _language }}">
-    <!-- Copyright © 2011-{{ 'now'|df('Y') }} Aleksey Ilyin (getwebspace.org) — OpenSource WebSpace Engine CMS -->
+    <!-- OpenSource WebSpace Engine CMS -->
     <!-- Website: https://getwebspace.org -->
+    <!-- Copyright: © 2011-{{ 'now'|df('Y') }} Aleksey Ilyin -->
 
     <head>
         <meta charset="utf-8">
